Determined relationship between Pregnancies and Outcome

--- a/Diabetes.ipynb
+++ b/Diabetes.ipynb
@@ -289,8 +289,271 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "eb4f1909-785b-4cd8-b657-2560992e5615",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style type=\"text/css\">\n",
+       "#T_576b9_row0_col0 {\n",
+       "  background-color: #ffea99;\n",
+       "  color: #000000;\n",
+       "}\n",
+       "#T_576b9_row0_col1 {\n",
+       "  background-color: #ffeb9c;\n",
+       "  color: #000000;\n",
+       "}\n",
+       "#T_576b9_row0_col2 {\n",
+       "  background-color: #ffea9b;\n",
+       "  color: #000000;\n",
+       "}\n",
+       "#T_576b9_row1_col0 {\n",
+       "  background-color: #fedf83;\n",
+       "  color: #000000;\n",
+       "}\n",
+       "#T_576b9_row1_col1 {\n",
+       "  background-color: #fff0a8;\n",
+       "  color: #000000;\n",
+       "}\n",
+       "#T_576b9_row1_col2 {\n",
+       "  background-color: #ffe590;\n",
+       "  color: #000000;\n",
+       "}\n",
+       "#T_576b9_row2_col0 {\n",
+       "  background-color: #ffe691;\n",
+       "  color: #000000;\n",
+       "}\n",
+       "#T_576b9_row2_col1, #T_576b9_row6_col0 {\n",
+       "  background-color: #fff5b5;\n",
+       "  color: #000000;\n",
+       "}\n",
+       "#T_576b9_row2_col2 {\n",
+       "  background-color: #ffec9d;\n",
+       "  color: #000000;\n",
+       "}\n",
+       "#T_576b9_row3_col0, #T_576b9_row3_col1, #T_576b9_row3_col2 {\n",
+       "  background-color: #fff1ab;\n",
+       "  color: #000000;\n",
+       "}\n",
+       "#T_576b9_row4_col0, #T_576b9_row7_col1 {\n",
+       "  background-color: #fff2ac;\n",
+       "  color: #000000;\n",
+       "}\n",
+       "#T_576b9_row4_col1 {\n",
+       "  background-color: #fff3af;\n",
+       "  color: #000000;\n",
+       "}\n",
+       "#T_576b9_row4_col2 {\n",
+       "  background-color: #fff3ae;\n",
+       "  color: #000000;\n",
+       "}\n",
+       "#T_576b9_row5_col0, #T_576b9_row5_col2 {\n",
+       "  background-color: #fff5b3;\n",
+       "  color: #000000;\n",
+       "}\n",
+       "#T_576b9_row5_col1 {\n",
+       "  background-color: #fff4b2;\n",
+       "  color: #000000;\n",
+       "}\n",
+       "#T_576b9_row6_col1, #T_576b9_row7_col2 {\n",
+       "  background-color: #fff7b9;\n",
+       "  color: #000000;\n",
+       "}\n",
+       "#T_576b9_row6_col2, #T_576b9_row9_col1 {\n",
+       "  background-color: #fff6b6;\n",
+       "  color: #000000;\n",
+       "}\n",
+       "#T_576b9_row7_col0 {\n",
+       "  background-color: #fff9be;\n",
+       "  color: #000000;\n",
+       "}\n",
+       "#T_576b9_row8_col0, #T_576b9_row10_col1 {\n",
+       "  background-color: #fffac1;\n",
+       "  color: #000000;\n",
+       "}\n",
+       "#T_576b9_row8_col1 {\n",
+       "  background-color: #fff4b0;\n",
+       "  color: #000000;\n",
+       "}\n",
+       "#T_576b9_row8_col2 {\n",
+       "  background-color: #fff8bb;\n",
+       "  color: #000000;\n",
+       "}\n",
+       "#T_576b9_row9_col0, #T_576b9_row11_col1 {\n",
+       "  background-color: #fffcc5;\n",
+       "  color: #000000;\n",
+       "}\n",
+       "#T_576b9_row9_col2 {\n",
+       "  background-color: #fffac0;\n",
+       "  color: #000000;\n",
+       "}\n",
+       "#T_576b9_row10_col0, #T_576b9_row10_col2 {\n",
+       "  background-color: #fffbc2;\n",
+       "  color: #000000;\n",
+       "}\n",
+       "#T_576b9_row11_col0, #T_576b9_row12_col0, #T_576b9_row12_col1, #T_576b9_row12_col2, #T_576b9_row13_col0 {\n",
+       "  background-color: #fffec9;\n",
+       "  color: #000000;\n",
+       "}\n",
+       "#T_576b9_row11_col2, #T_576b9_row13_col1, #T_576b9_row13_col2 {\n",
+       "  background-color: #fffdc8;\n",
+       "  color: #000000;\n",
+       "}\n",
+       "#T_576b9_row14_col0, #T_576b9_row14_col1, #T_576b9_row14_col2, #T_576b9_row15_col0, #T_576b9_row15_col1, #T_576b9_row15_col2, #T_576b9_row16_col0, #T_576b9_row16_col1, #T_576b9_row16_col2 {\n",
+       "  background-color: #ffffcc;\n",
+       "  color: #000000;\n",
+       "}\n",
+       "#T_576b9_row17_col0, #T_576b9_row17_col1, #T_576b9_row17_col2 {\n",
+       "  background-color: #800026;\n",
+       "  color: #f1f1f1;\n",
+       "}\n",
+       "</style>\n",
+       "<table id=\"T_576b9\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th class=\"index_name level0\" >Outcome</th>\n",
+       "      <th id=\"T_576b9_level0_col0\" class=\"col_heading level0 col0\" >0</th>\n",
+       "      <th id=\"T_576b9_level0_col1\" class=\"col_heading level0 col1\" >1</th>\n",
+       "      <th id=\"T_576b9_level0_col2\" class=\"col_heading level0 col2\" >All</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th class=\"index_name level0\" >Pregnancies</th>\n",
+       "      <th class=\"blank col0\" >&nbsp;</th>\n",
+       "      <th class=\"blank col1\" >&nbsp;</th>\n",
+       "      <th class=\"blank col2\" >&nbsp;</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th id=\"T_576b9_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
+       "      <td id=\"T_576b9_row0_col0\" class=\"data row0 col0\" >73</td>\n",
+       "      <td id=\"T_576b9_row0_col1\" class=\"data row0 col1\" >38</td>\n",
+       "      <td id=\"T_576b9_row0_col2\" class=\"data row0 col2\" >111</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_576b9_level0_row1\" class=\"row_heading level0 row1\" >1</th>\n",
+       "      <td id=\"T_576b9_row1_col0\" class=\"data row1 col0\" >106</td>\n",
+       "      <td id=\"T_576b9_row1_col1\" class=\"data row1 col1\" >29</td>\n",
+       "      <td id=\"T_576b9_row1_col2\" class=\"data row1 col2\" >135</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_576b9_level0_row2\" class=\"row_heading level0 row2\" >2</th>\n",
+       "      <td id=\"T_576b9_row2_col0\" class=\"data row2 col0\" >84</td>\n",
+       "      <td id=\"T_576b9_row2_col1\" class=\"data row2 col1\" >19</td>\n",
+       "      <td id=\"T_576b9_row2_col2\" class=\"data row2 col2\" >103</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_576b9_level0_row3\" class=\"row_heading level0 row3\" >3</th>\n",
+       "      <td id=\"T_576b9_row3_col0\" class=\"data row3 col0\" >48</td>\n",
+       "      <td id=\"T_576b9_row3_col1\" class=\"data row3 col1\" >27</td>\n",
+       "      <td id=\"T_576b9_row3_col2\" class=\"data row3 col2\" >75</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_576b9_level0_row4\" class=\"row_heading level0 row4\" >4</th>\n",
+       "      <td id=\"T_576b9_row4_col0\" class=\"data row4 col0\" >45</td>\n",
+       "      <td id=\"T_576b9_row4_col1\" class=\"data row4 col1\" >23</td>\n",
+       "      <td id=\"T_576b9_row4_col2\" class=\"data row4 col2\" >68</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_576b9_level0_row5\" class=\"row_heading level0 row5\" >5</th>\n",
+       "      <td id=\"T_576b9_row5_col0\" class=\"data row5 col0\" >36</td>\n",
+       "      <td id=\"T_576b9_row5_col1\" class=\"data row5 col1\" >21</td>\n",
+       "      <td id=\"T_576b9_row5_col2\" class=\"data row5 col2\" >57</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_576b9_level0_row6\" class=\"row_heading level0 row6\" >6</th>\n",
+       "      <td id=\"T_576b9_row6_col0\" class=\"data row6 col0\" >34</td>\n",
+       "      <td id=\"T_576b9_row6_col1\" class=\"data row6 col1\" >16</td>\n",
+       "      <td id=\"T_576b9_row6_col2\" class=\"data row6 col2\" >50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_576b9_level0_row7\" class=\"row_heading level0 row7\" >7</th>\n",
+       "      <td id=\"T_576b9_row7_col0\" class=\"data row7 col0\" >20</td>\n",
+       "      <td id=\"T_576b9_row7_col1\" class=\"data row7 col1\" >25</td>\n",
+       "      <td id=\"T_576b9_row7_col2\" class=\"data row7 col2\" >45</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_576b9_level0_row8\" class=\"row_heading level0 row8\" >8</th>\n",
+       "      <td id=\"T_576b9_row8_col0\" class=\"data row8 col0\" >16</td>\n",
+       "      <td id=\"T_576b9_row8_col1\" class=\"data row8 col1\" >22</td>\n",
+       "      <td id=\"T_576b9_row8_col2\" class=\"data row8 col2\" >38</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_576b9_level0_row9\" class=\"row_heading level0 row9\" >9</th>\n",
+       "      <td id=\"T_576b9_row9_col0\" class=\"data row9 col0\" >10</td>\n",
+       "      <td id=\"T_576b9_row9_col1\" class=\"data row9 col1\" >18</td>\n",
+       "      <td id=\"T_576b9_row9_col2\" class=\"data row9 col2\" >28</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_576b9_level0_row10\" class=\"row_heading level0 row10\" >10</th>\n",
+       "      <td id=\"T_576b9_row10_col0\" class=\"data row10 col0\" >14</td>\n",
+       "      <td id=\"T_576b9_row10_col1\" class=\"data row10 col1\" >10</td>\n",
+       "      <td id=\"T_576b9_row10_col2\" class=\"data row10 col2\" >24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_576b9_level0_row11\" class=\"row_heading level0 row11\" >11</th>\n",
+       "      <td id=\"T_576b9_row11_col0\" class=\"data row11 col0\" >4</td>\n",
+       "      <td id=\"T_576b9_row11_col1\" class=\"data row11 col1\" >7</td>\n",
+       "      <td id=\"T_576b9_row11_col2\" class=\"data row11 col2\" >11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_576b9_level0_row12\" class=\"row_heading level0 row12\" >12</th>\n",
+       "      <td id=\"T_576b9_row12_col0\" class=\"data row12 col0\" >5</td>\n",
+       "      <td id=\"T_576b9_row12_col1\" class=\"data row12 col1\" >4</td>\n",
+       "      <td id=\"T_576b9_row12_col2\" class=\"data row12 col2\" >9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_576b9_level0_row13\" class=\"row_heading level0 row13\" >13</th>\n",
+       "      <td id=\"T_576b9_row13_col0\" class=\"data row13 col0\" >5</td>\n",
+       "      <td id=\"T_576b9_row13_col1\" class=\"data row13 col1\" >5</td>\n",
+       "      <td id=\"T_576b9_row13_col2\" class=\"data row13 col2\" >10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_576b9_level0_row14\" class=\"row_heading level0 row14\" >14</th>\n",
+       "      <td id=\"T_576b9_row14_col0\" class=\"data row14 col0\" >0</td>\n",
+       "      <td id=\"T_576b9_row14_col1\" class=\"data row14 col1\" >2</td>\n",
+       "      <td id=\"T_576b9_row14_col2\" class=\"data row14 col2\" >2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_576b9_level0_row15\" class=\"row_heading level0 row15\" >15</th>\n",
+       "      <td id=\"T_576b9_row15_col0\" class=\"data row15 col0\" >0</td>\n",
+       "      <td id=\"T_576b9_row15_col1\" class=\"data row15 col1\" >1</td>\n",
+       "      <td id=\"T_576b9_row15_col2\" class=\"data row15 col2\" >1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_576b9_level0_row16\" class=\"row_heading level0 row16\" >17</th>\n",
+       "      <td id=\"T_576b9_row16_col0\" class=\"data row16 col0\" >0</td>\n",
+       "      <td id=\"T_576b9_row16_col1\" class=\"data row16 col1\" >1</td>\n",
+       "      <td id=\"T_576b9_row16_col2\" class=\"data row16 col2\" >1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_576b9_level0_row17\" class=\"row_heading level0 row17\" >All</th>\n",
+       "      <td id=\"T_576b9_row17_col0\" class=\"data row17 col0\" >500</td>\n",
+       "      <td id=\"T_576b9_row17_col1\" class=\"data row17 col1\" >268</td>\n",
+       "      <td id=\"T_576b9_row17_col2\" class=\"data row17 col2\" >768</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n"
+      ],
+      "text/plain": [
+       "<pandas.io.formats.style.Styler at 0x267b5ecd290>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.crosstab(df['Pregnancies'],df['Outcome'], margins =True).style.background_gradient(cmap='YlOrRd')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "59500ec1-d87e-476b-aea4-03e92656f822",
    "metadata": {},
    "outputs": [],
    "source": []
