Examined the correlation between Age, Pregnancies, and Outcome.

--- a/Diabetes.ipynb
+++ b/Diabetes.ipynb
@@ -743,6 +743,71 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 33,
+   "id": "1ac58232-f2b3-40ec-ae54-5dba6f2a2913",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "32.3"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "zeros_in_BMI = (df[\"BMI\"]==0).sum()\n",
+    "print(zeros_in_BMI)\n",
+    "non_zero_BMI_median = df[df['BMI']!=0][\"BMI\"].median()\n",
+    "non_zero_BMI_median"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "e50327c7-6999-4d6c-8f82-e58bfb0131f0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "   Pregnancies  Glucose  BloodPressure  SkinThickness  Insulin   BMI  \\\n",
+      "0            6      148             72             35      125  33.6   \n",
+      "1            1       85             66             29      125  26.6   \n",
+      "2            8      183             64             32      125  23.3   \n",
+      "3            1       89             66             23       94  28.1   \n",
+      "4            0      137             40             35      168  43.1   \n",
+      "\n",
+      "   DiabetesPedigreeFunction  Age  Outcome  \n",
+      "0                     0.627   50        1  \n",
+      "1                     0.351   31        0  \n",
+      "2                     0.672   32        1  \n",
+      "3                     0.167   21        0  \n",
+      "4                     2.288   33        1  \n"
+     ]
+    }
+   ],
+   "source": [
+    "df.loc[df['BMI'] == 0, 'BMI'] = non_zero_BMI_median\n",
+    "zeros_in_BMI = (df[\"BMI\"]==0).sum()\n",
+    "print(zeros_in_BMI)\n",
+    "print(df.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 14,
    "id": "f416ce3e-feb9-4ab2-90b6-4d7607b86ae7",
    "metadata": {},
@@ -1076,7 +1141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 32,
    "id": "0667dd77-4d05-4216-9272-120f3ab31fa1",
    "metadata": {},
    "outputs": [
@@ -1094,7 +1159,7 @@
     }
    ],
    "source": [
-    "#relation between age and Outcome\n",
+    "#relation between glucose and Outcome\n",
     "low_glucose =df[df['Glucose'] < 70]\n",
     "normal_glucose=df[(df['Glucose'] >= 70) & (df['Glucose'] <= 100)]\n",
     "high_glucose=df[(df['Glucose'] >100)]\n",
@@ -1210,8 +1275,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "f0685fed-9d1a-4ee6-85d3-3ec9d172eae3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "total_young_adults_preg = df[(df['Age'] >= 20) & (df['Age'] <= 29) & (df['Pregnancies'] >=1)]\n",
+    "total_adults_preg = df[(df['Age'] >= 30) & (df['Age'] <= 49) & (df['Pregnancies'] >= 1)]\n",
+    "total_middle_aged_preg = df[(df['Age'] >= 50) & (df['Age'] <= 64) & (df['Pregnancies'] >= 1)]\n",
+    "total_seniors_preg = df[(df['Age'] >= 65) & (df['Pregnancies'] >= 1)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "5ee1b733-3333-4411-9df3-fa651ea79ca5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Young Adults (Pregnant): 18.77% Diabetic\n",
+      "Young Adults (Pregnant): 81.23% Not Diabetic\n",
+      "Adults (Pregnant): 49.43% Diabetic\n",
+      "Adults (Pregnant): 50.57% Not Diabetic\n",
+      "Middle Aged (Pregnant): 53.62% Diabetic\n",
+      "Middle Aged (Pregnant): 46.38% Not Diabetic\n",
+      "Seniors (Pregnant): 28.57% Diabetic\n",
+      "Seniors (Pregnant): 71.43% Not Diabetic\n"
+     ]
+    }
+   ],
+   "source": [
+    "Young_Adults_preg_dia = (total_young_adults_preg['Outcome']==1).mean()*100\n",
+    "Young_Adults_preg_not_dia = (total_young_adults_preg['Outcome']==0).mean()*100\n",
+    "\n",
+    "Adults_preg_dia = (total_adults_preg['Outcome'] == 1).mean() * 100\n",
+    "Adults_preg_not_dia = (total_adults_preg['Outcome'] == 0).mean() * 100\n",
+    "\n",
+    "Middle_aged_preg_dia = (total_middle_aged_preg['Outcome'] == 1).mean() * 100\n",
+    "Middle_aged_preg_not_dia = (total_middle_aged_preg['Outcome'] == 0).mean() * 100\n",
+    "\n",
+    "Seniors_preg_dia = (total_seniors_preg['Outcome'] == 1).mean() * 100\n",
+    "Seniors_preg_not_dia = (total_seniors_preg['Outcome'] == 0).mean() * 100\n",
+    "\n",
+    "print(\"Young Adults (Pregnant): {:.2f}% Diabetic\".format(Young_Adults_preg_dia))\n",
+    "print(\"Young Adults (Pregnant): {:.2f}% Not Diabetic\".format(Young_Adults_preg_not_dia))\n",
+    "\n",
+    "print(\"Adults (Pregnant): {:.2f}% Diabetic\".format(Adults_preg_dia))\n",
+    "print(\"Adults (Pregnant): {:.2f}% Not Diabetic\".format(Adults_preg_not_dia))\n",
+    "\n",
+    "print(\"Middle Aged (Pregnant): {:.2f}% Diabetic\".format(Middle_aged_preg_dia))\n",
+    "print(\"Middle Aged (Pregnant): {:.2f}% Not Diabetic\".format(Middle_aged_preg_not_dia))\n",
+    "\n",
+    "print(\"Seniors (Pregnant): {:.2f}% Diabetic\".format(Seniors_preg_dia))\n",
+    "print(\"Seniors (Pregnant): {:.2f}% Not Diabetic\".format(Seniors_preg_not_dia))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1150e1fa-7866-4546-9653-1ac864804693",
    "metadata": {},
    "outputs": [],
    "source": []
